--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -80,33 +80,30 @@
 
         
       <div class="w3-container w3-xlarge w3-padding">
-          <center>
-              <a target="_blank" href="https://www.facebook.com/rubenandrebarreiro" title="Rúben André Barreiro (BadNewz) on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben André Barreiro (BadNewz) on Facebook"></i></a>
-              <a target="_blank" href="https://www.facebook.com/badnewz.lifestyle" title="BadNewz Lifestyle on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Lifestyle on Facebook"></i></a>
-              <a target="_blank" href="https://www.linkedin.com/in/rubenandrebarreiro/" title="Rúben André Barreiro on LinkedIn"><i class="fa fa-linkedin w3-hover-text-blue" title="Rúben André Barreiro on LinkedIn"></i></a>
-              <a target="_blank" href="https://www.twitter.com/ruben_badnewz/" title="Rúben André Barreiro (BadNewz) on Twitter"><i class="fa fa-twitter w3-hover-text-cyan" title="Rúben André Barreiro (BadNewz) on Twitter"></i></a>
-              <a target="_blank" href="someLink"><i class="fa fa-wordpress w3-hover-text-blue"></i></a>
-              <a target="_blank" href="https://github.com/rubenandrebarreiro" title="Rúben André Barreiro on GitHub"><i class="fa fa-github w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
-              <a target="_blank" href="https://stackoverflow.com/story/rubenandrebarreiro" title="Rúben André Barreiro on Stack Overflow"><i class="fa fa-stack-overflow w3-hover-text-orange" title="Rúben André Barreiro on Stack Overflow"></i></a>
-              <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-researchgate w3-hover-text-teal" title="Rúben André Barreiro on ResearchGate"></i></a>
+          <a target="_blank" href="https://www.facebook.com/rubenandrebarreiro" title="Rúben André Barreiro (BadNewz) on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben André Barreiro (BadNewz) on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.lifestyle" title="BadNewz Lifestyle on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Lifestyle on Facebook"></i></a>
+          <a target="_blank" href="https://www.linkedin.com/in/rubenandrebarreiro/" title="Rúben André Barreiro on LinkedIn"><i class="fa fa-linkedin w3-hover-text-blue" title="Rúben André Barreiro on LinkedIn"></i></a>
+          <a target="_blank" href="https://www.twitter.com/ruben_badnewz/" title="Rúben André Barreiro (BadNewz) on Twitter"><i class="fa fa-twitter w3-hover-text-cyan" title="Rúben André Barreiro (BadNewz) on Twitter"></i></a>
+          <a target="_blank" href="someLink"><i class="fa fa-wordpress w3-hover-text-blue"></i></a>
+          <a target="_blank" href="https://github.com/rubenandrebarreiro" title="Rúben André Barreiro on GitHub"><i class="fa fa-github w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
+          <a target="_blank" href="https://stackoverflow.com/story/rubenandrebarreiro" title="Rúben André Barreiro on Stack Overflow"><i class="fa fa-stack-overflow w3-hover-text-orange" title="Rúben André Barreiro on Stack Overflow"></i></a>
+          <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-researchgate w3-hover-text-teal" title="Rúben André Barreiro on ResearchGate"></i></a>
 
-              <br>
+          <br>
 
-              <a target="_blank" href="https://www.instagram.com/ruben.badnewz/" title="Rúben André Barreiro (BadNewz) on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="Rúben André Barreiro (BadNewz) on Instagram"></i></a>
-              <a target="_blank" href="someLink"><i class="fa fa-youtube w3-hover-text-red"></i></a>
-              <a target="_blank" href="https://badnewz-lifestyle.tumblr.com/" title="BadNewz Lifestyle on Tumblr"><i class="fa fa-tumblr w3-hover-text-indigo" title="BadNewz Lifestyle on Tumblr"></i></a>
-              <a target="_blank" href="https://www.pinterest.com/ruben_badnewz/" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-pinterest-p w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
-              <a target="_blank" href="someLink"><i class="fa fa-flickr w3-hover-text-purple"></i></a>
-              <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-dark-gray"></i></a>
-              <a target="_blank" href="someLink" style="text-decoration: none"
-                 onmouseover="this.style.color='#848484'"
-                 onmouseout="this.style.color='#FFFFFF'">
-                <span class="icon-vsco" title="Rúben André Barreiro on VSCO" style="font-size:20px"></span>
-              </a>
-              <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
-              <a href="https://rubenandrebarreiro.github.io/contacts#othersociallinksusernames" title="Other Social Links/Usernames"><i class="fa fa-comments w3-hover-text-light-blue" title="Other Social Links/Usernames"></i></a>
-              <a href="https://rubenandrebarreiro.github.io/contacts#emails" title="My E-mails"><i class="fa fa-at w3-hover-text-yellow" title="My E-mails"></i></a>
-          </center>
+          <a target="_blank" href="https://www.instagram.com/ruben.badnewz/" title="Rúben André Barreiro (BadNewz) on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="Rúben André Barreiro (BadNewz) on Instagram"></i></a>
+          <a target="_blank" href="someLink"><i class="fa fa-youtube w3-hover-text-red"></i></a>
+          <a target="_blank" href="https://badnewz-lifestyle.tumblr.com/" title="BadNewz Lifestyle on Tumblr"><i class="fa fa-tumblr w3-hover-text-indigo" title="BadNewz Lifestyle on Tumblr"></i></a>
+          <a target="_blank" href="https://www.pinterest.com/ruben_badnewz/" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-pinterest-p w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
+          <a target="_blank" href="someLink"><i class="fa fa-flickr w3-hover-text-purple"></i></a>
+          <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-dark-gray"></i></a>
+          <a target="_blank" href="someLink" style="text-decoration: none"
+                 onmouseover="this.style.color='#848484'" onmouseout="this.style.color='#FFFFFF'">
+              <span class="icon-vsco" title="Rúben André Barreiro on VSCO" style="font-size:20px"></span>
+          </a>
+          <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
+          <a href="https://rubenandrebarreiro.github.io/contacts#othersociallinksusernames" title="Other Social Links/Usernames"><i class="fa fa-comments w3-hover-text-light-blue" title="Other Social Links/Usernames"></i></a>
+          <a href="https://rubenandrebarreiro.github.io/contacts#emails" title="My E-mails"><i class="fa fa-at w3-hover-text-yellow" title="My E-mails"></i></a>
       </div>
       <hr/>
     
