--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -1,444 +1,4 @@
 <style>
-.icon-new-university-lisbon .path1:before {
-  content: "\e900";
-  color: #308041;
-}
-.icon-new-university-lisbon .path2:before {
-  content: "\e901";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path3:before {
-  content: "\e902";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path4:before {
-  content: "\e903";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path5:before {
-  content: "\e904";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path6:before {
-  content: "\e905";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path7:before {
-  content: "\e906";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path8:before {
-  content: "\e907";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path9:before {
-  content: "\e908";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path10:before {
-  content: "\e909";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path11:before {
-  content: "\e90a";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path12:before {
-  content: "\e90b";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path13:before {
-  content: "\e90c";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path14:before {
-  content: "\e90d";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path15:before {
-  content: "\e90e";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path16:before {
-  content: "\e90f";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path17:before {
-  content: "\e910";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path18:before {
-  content: "\e911";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path19:before {
-  content: "\e912";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path20:before {
-  content: "\e913";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path21:before {
-  content: "\e914";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path22:before {
-  content: "\e915";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path23:before {
-  content: "\e916";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path24:before {
-  content: "\e917";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path25:before {
-  content: "\e918";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path26:before {
-  content: "\e919";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path27:before {
-  content: "\e91a";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path28:before {
-  content: "\e91b";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path29:before {
-  content: "\e91c";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path30:before {
-  content: "\e91d";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path31:before {
-  content: "\e91e";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path32:before {
-  content: "\e91f";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path33:before {
-  content: "\e920";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path34:before {
-  content: "\e921";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path35:before {
-  content: "\e922";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path36:before {
-  content: "\e923";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path37:before {
-  content: "\e924";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path38:before {
-  content: "\e925";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path39:before {
-  content: "\e926";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path40:before {
-  content: "\e927";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path41:before {
-  content: "\e928";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path42:before {
-  content: "\e929";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path43:before {
-  content: "\e92a";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path44:before {
-  content: "\e92b";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path45:before {
-  content: "\e92c";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path46:before {
-  content: "\e92d";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path47:before {
-  content: "\e92e";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path48:before {
-  content: "\e92f";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path49:before {
-  content: "\e930";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path50:before {
-  content: "\e931";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path51:before {
-  content: "\e932";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path52:before {
-  content: "\e933";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path53:before {
-  content: "\e934";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path54:before {
-  content: "\e935";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path55:before {
-  content: "\e936";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path56:before {
-  content: "\e937";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path57:before {
-  content: "\e938";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path58:before {
-  content: "\e939";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path59:before {
-  content: "\e93a";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path60:before {
-  content: "\e93b";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path61:before {
-  content: "\e93c";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path62:before {
-  content: "\e93d";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path63:before {
-  content: "\e93e";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path64:before {
-  content: "\e93f";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path65:before {
-  content: "\e940";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path66:before {
-  content: "\e941";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path67:before {
-  content: "\e942";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path68:before {
-  content: "\e943";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path69:before {
-  content: "\e944";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path70:before {
-  content: "\e945";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path71:before {
-  content: "\e946";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path72:before {
-  content: "\e947";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path73:before {
-  content: "\e948";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path74:before {
-  content: "\e949";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path75:before {
-  content: "\e94a";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path76:before {
-  content: "\e94b";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path77:before {
-  content: "\e94c";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path78:before {
-  content: "\e94d";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path79:before {
-  content: "\e94e";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path80:before {
-  content: "\e94f";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path81:before {
-  content: "\e950";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path82:before {
-  content: "\e951";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path83:before {
-  content: "\e952";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path84:before {
-  content: "\e953";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path85:before {
-  content: "\e954";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path86:before {
-  content: "\e955";
-  color: #fff;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path87:before {
-  content: "\e956";
-  color: #308041;
-  margin-left: -1em;
-}
-.icon-new-university-lisbon .path88:before {
-  content: "\e957";
-  color: #308041;
-  margin-left: -1em;
-}
-    
 .icon-discord:before {
   content: "\e900";
   color: #7289da;
@@ -450,7 +10,6 @@
 </style>
 
 <link rel="stylesheet" href="/apps-brands-social-icons/style.css">
-<link rel="stylesheet" href="/projects/colleges-universities-icons/style.css">
 
 {% if page.bg %}
   <aside class="sidebar" role="note" style="background-image: url({{ site.images | relative_url }}/{{ page.bg }})">
@@ -496,9 +55,7 @@
       <div class="shortbio">
           ♏ 90's | 🎂 25 years | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT
           <br>
-          <span class="icon-new-university-lisbon" title="Fractals with Mandelbrot and Julia sets, using WebGL (FCT NOVA - October 2016)">
-        <span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span><span class="path6"></span><span class="path7"></span><span class="path8"></span><span class="path9"></span><span class="path10"></span><span class="path11"></span><span class="path12"></span><span class="path13"></span><span class="path14"></span><span class="path15"></span><span class="path16"></span><span class="path17"></span><span class="path18"></span><span class="path19"></span><span class="path20"></span><span class="path21"></span><span class="path22"></span><span class="path23"></span><span class="path24"></span><span class="path25"></span><span class="path26"></span><span class="path27"></span><span class="path28"></span><span class="path29"></span><span class="path30"></span><span class="path31"></span><span class="path32"></span><span class="path33"></span><span class="path34"></span><span class="path35"></span><span class="path36"></span><span class="path37"></span><span class="path38"></span><span class="path39"></span><span class="path40"></span><span class="path41"></span><span class="path42"></span><span class="path43"></span><span class="path44"></span><span class="path45"></span><span class="path46"></span><span class="path47"></span><span class="path48"></span><span class="path49"></span><span class="path50"></span><span class="path51"></span><span class="path52"></span><span class="path53"></span><span class="path54"></span><span class="path55"></span><span class="path56"></span><span class="path57"></span><span class="path58"></span><span class="path59"></span><span class="path60"></span><span class="path61"></span><span class="path62"></span><span class="path63"></span><span class="path64"></span><span class="path65"></span><span class="path66"></span><span class="path67"></span><span class="path68"></span><span class="path69"></span><span class="path70"></span><span class="path71"></span><span class="path72"></span><span class="path73"></span><span class="path74"></span><span class="path75"></span><span class="path76"></span><span class="path77"></span><span class="path78"></span><span class="path79"></span><span class="path80"></span><span class="path81"></span><span class="path82"></span><span class="path83"></span><span class="path84"></span><span class="path85"></span><span class="path86"></span><span class="path87"></span><span class="path88"></span>
-    </span>🎓 BSc @ FCT NOVA, PT
+          🎓 BSc @ FCT NOVA, PT
           <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
