--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -85,6 +85,7 @@
           <a target="_blank" href="https://www.linkedin.com/in/rubenandrebarreiro/" title="Rúben André Barreiro on LinkedIn"><i class="fa fa-linkedin w3-hover-text-blue" title="Rúben André Barreiro on LinkedIn"></i></a>
           <a target="_blank" href="https://www.twitter.com/ruben_badnewz/" title="Rúben André Barreiro (BadNewz) on Twitter"><i class="fa fa-twitter w3-hover-text-cyan" title="Rúben André Barreiro (BadNewz) on Twitter"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-wordpress w3-hover-text-blue"></i></a>
+          <a target="_blank" href="https://www.reddit.com/user/ruben_barreiro_92" title="Rúben André Barreiro (BadNewz) on Reddit"><i class="fa fa-reddit w3-hover-text-gray" title="Rúben André Barreiro (BadNewz) on Reddit"></i></a>
           <a target="_blank" href="https://github.com/rubenandrebarreiro" title="Rúben André Barreiro on GitHub"><i class="fa fa-github w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
           <a target="_blank" href="https://stackoverflow.com/story/rubenandrebarreiro" title="Rúben André Barreiro on Stack Overflow"><i class="fa fa-stack-overflow w3-hover-text-orange" title="Rúben André Barreiro on Stack Overflow"></i></a>
           <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-researchgate w3-hover-text-teal" title="Rúben André Barreiro on ResearchGate"></i></a>
