--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 
   <nav class="center-wrapper nav-main">
 
-    <a class="blog-logo" href="{{ site.baseurl }}/"><img src="..\assets\images\Protrait_2D_1.png"/>{{ site.title }}</a>
+    <a class="blog-logo" href="{{ site.baseurl }}/"><img src="..\assets\images\Protrait_2D_1.png" width="40" height="40"/>{{ site.title }}</a>
 
     {% for my_page in site.pages %}
       {% if my_page.active %}
