--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -55,7 +55,7 @@
       <div class="shortbio">
           ♏ 90's | 🎂 25 years | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT
           <br>
-          🎓 BSc @ FCT NOVA, PT
+          🎓 BSc @ FCT NOVA, PT | 🎓 MSc @ FEUP, PT
           <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
