--- a/projects/colleges-universities-icons/style.css
+++ b/projects/colleges-universities-icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?u64o1j');
-  src:  url('fonts/icomoon.eot?u64o1j#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?u64o1j') format('truetype'),
-    url('fonts/icomoon.woff?u64o1j') format('woff'),
-    url('fonts/icomoon.svg?u64o1j#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?3g1kn');
+  src:  url('fonts/icomoon.eot?3g1kn#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?3g1kn') format('truetype'),
+    url('fonts/icomoon.woff?3g1kn') format('woff'),
+    url('fonts/icomoon.svg?3g1kn#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,6 +24,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-Logo_2:before {
+  content: "\e95d";
+}
+.icon-university-porto:before {
+  content: "\e95e";
+}
 .icon-vsco:before {
   content: "\e95c";
 }
