--- a/projects/colleges-universities-icons/style.css
+++ b/projects/colleges-universities-icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?3g1kn');
-  src:  url('fonts/icomoon.eot?3g1kn#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?3g1kn') format('truetype'),
-    url('fonts/icomoon.woff?3g1kn') format('woff'),
-    url('fonts/icomoon.svg?3g1kn#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?i7j6tm');
+  src:  url('fonts/icomoon.eot?i7j6tm#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?i7j6tm') format('truetype'),
+    url('fonts/icomoon.woff?i7j6tm') format('woff'),
+    url('fonts/icomoon.svg?i7j6tm#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,11 +24,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-Logo_2:before {
-  content: "\e95d";
-}
 .icon-university-porto:before {
-  content: "\e95e";
+  content: "\e95d";
 }
 .icon-vsco:before {
   content: "\e95c";
