--- a/projects/colleges-universities-icons/style.css
+++ b/projects/colleges-universities-icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?sqobo');
-  src:  url('fonts/icomoon.eot?sqobo#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?sqobo') format('truetype'),
-    url('fonts/icomoon.woff?sqobo') format('woff'),
-    url('fonts/icomoon.svg?sqobo#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?3ay08u');
+  src:  url('fonts/icomoon.eot?3ay08u#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?3ay08u') format('truetype'),
+    url('fonts/icomoon.woff?3ay08u') format('woff'),
+    url('fonts/icomoon.svg?3ay08u#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,279 +24,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-feup .path1:before {
+.icon-feup:before {
   content: "\e95e";
-  color: rgb(166, 54, 33);
-}
-.icon-feup .path2:before {
-  content: "\e95f";
-  margin-left: -2.845703125em;
-  color: rgb(174, 68, 48);
-}
-.icon-feup .path3:before {
-  content: "\e960";
-  margin-left: -2.845703125em;
-  color: rgb(174, 68, 48);
-}
-.icon-feup .path4:before {
-  content: "\e961";
-  margin-left: -2.845703125em;
-  color: rgb(174, 68, 48);
-}
-.icon-feup .path5:before {
-  content: "\e962";
-  margin-left: -2.845703125em;
-  color: rgb(174, 68, 48);
-}
-.icon-feup .path6:before {
-  content: "\e963";
-  margin-left: -2.845703125em;
-  color: rgb(174, 68, 48);
-}
-.icon-feup .path7:before {
-  content: "\e964";
-  margin-left: -2.845703125em;
-  color: rgb(174, 68, 48);
-}
-.icon-feup .path8:before {
-  content: "\e965";
-  margin-left: -2.845703125em;
-  color: rgb(174, 68, 48);
-}
-.icon-feup .path9:before {
-  content: "\e966";
-  margin-left: -2.845703125em;
-  color: rgb(174, 68, 48);
-}
-.icon-feup .path10:before {
-  content: "\e967";
-  margin-left: -2.845703125em;
-  color: rgb(174, 68, 48);
-}
-.icon-feup .path11:before {
-  content: "\e968";
-  margin-left: -2.845703125em;
-  color: rgb(174, 68, 48);
-}
-.icon-feup .path12:before {
-  content: "\e969";
-  margin-left: -2.845703125em;
-  color: rgb(184, 91, 74);
-}
-.icon-feup .path13:before {
-  content: "\e96a";
-  margin-left: -2.845703125em;
-  color: rgb(184, 91, 74);
-}
-.icon-feup .path14:before {
-  content: "\e96b";
-  margin-left: -2.845703125em;
-  color: rgb(184, 91, 74);
-}
-.icon-feup .path15:before {
-  content: "\e96c";
-  margin-left: -2.845703125em;
-  color: rgb(184, 91, 74);
-}
-.icon-feup .path16:before {
-  content: "\e96d";
-  margin-left: -2.845703125em;
-  color: rgb(184, 91, 74);
-}
-.icon-feup .path17:before {
-  content: "\e96e";
-  margin-left: -2.845703125em;
-  color: rgb(184, 91, 74);
-}
-.icon-feup .path18:before {
-  content: "\e96f";
-  margin-left: -2.845703125em;
-  color: rgb(189, 103, 87);
-}
-.icon-feup .path19:before {
-  content: "\e970";
-  margin-left: -2.845703125em;
-  color: rgb(189, 103, 87);
-}
-.icon-feup .path20:before {
-  content: "\e971";
-  margin-left: -2.845703125em;
-  color: rgb(189, 103, 87);
-}
-.icon-feup .path21:before {
-  content: "\e972";
-  margin-left: -2.845703125em;
-  color: rgb(189, 103, 87);
-}
-.icon-feup .path22:before {
-  content: "\e973";
-  margin-left: -2.845703125em;
-  color: rgb(189, 103, 87);
-}
-.icon-feup .path23:before {
-  content: "\e974";
-  margin-left: -2.845703125em;
-  color: rgb(189, 103, 87);
-}
-.icon-feup .path24:before {
-  content: "\e975";
-  margin-left: -2.845703125em;
-  color: rgb(192, 113, 98);
-}
-.icon-feup .path25:before {
-  content: "\e976";
-  margin-left: -2.845703125em;
-  color: rgb(192, 113, 98);
-}
-.icon-feup .path26:before {
-  content: "\e977";
-  margin-left: -2.845703125em;
-  color: rgb(192, 113, 98);
-}
-.icon-feup .path27:before {
-  content: "\e978";
-  margin-left: -2.845703125em;
-  color: rgb(192, 113, 98);
-}
-.icon-feup .path28:before {
-  content: "\e979";
-  margin-left: -2.845703125em;
-  color: rgb(192, 113, 98);
-}
-.icon-feup .path29:before {
-  content: "\e97a";
-  margin-left: -2.845703125em;
-  color: rgb(192, 113, 98);
-}
-.icon-feup .path30:before {
-  content: "\e97b";
-  margin-left: -2.845703125em;
-  color: rgb(199, 125, 112);
-}
-.icon-feup .path31:before {
-  content: "\e97c";
-  margin-left: -2.845703125em;
-  color: rgb(199, 125, 112);
-}
-.icon-feup .path32:before {
-  content: "\e97d";
-  margin-left: -2.845703125em;
-  color: rgb(199, 125, 112);
-}
-.icon-feup .path33:before {
-  content: "\e97e";
-  margin-left: -2.845703125em;
-  color: rgb(199, 125, 112);
-}
-.icon-feup .path34:before {
-  content: "\e97f";
-  margin-left: -2.845703125em;
-  color: rgb(199, 125, 112);
-}
-.icon-feup .path35:before {
-  content: "\e980";
-  margin-left: -2.845703125em;
-  color: rgb(199, 125, 112);
-}
-.icon-feup .path36:before {
-  content: "\e981";
-  margin-left: -2.845703125em;
-  color: rgb(221, 180, 172);
-}
-.icon-feup .path37:before {
-  content: "\e982";
-  margin-left: -2.845703125em;
-  color: rgb(221, 180, 172);
-}
-.icon-feup .path38:before {
-  content: "\e983";
-  margin-left: -2.845703125em;
-  color: rgb(221, 180, 172);
-}
-.icon-feup .path39:before {
-  content: "\e984";
-  margin-left: -2.845703125em;
-  color: rgb(221, 180, 172);
-}
-.icon-feup .path40:before {
-  content: "\e985";
-  margin-left: -2.845703125em;
-  color: rgb(221, 180, 172);
-}
-.icon-feup .path41:before {
-  content: "\e986";
-  margin-left: -2.845703125em;
-  color: rgb(230, 196, 189);
-}
-.icon-feup .path42:before {
-  content: "\e987";
-  margin-left: -2.845703125em;
-  color: rgb(230, 196, 189);
-}
-.icon-feup .path43:before {
-  content: "\e988";
-  margin-left: -2.845703125em;
-  color: rgb(230, 196, 189);
-}
-.icon-feup .path44:before {
-  content: "\e989";
-  margin-left: -2.845703125em;
-  color: rgb(230, 196, 189);
-}
-.icon-feup .path45:before {
-  content: "\e98a";
-  margin-left: -2.845703125em;
-  color: rgb(230, 196, 189);
-}
-.icon-feup .path46:before {
-  content: "\e98b";
-  margin-left: -2.845703125em;
-  color: rgb(236, 210, 206);
-}
-.icon-feup .path47:before {
-  content: "\e98c";
-  margin-left: -2.845703125em;
-  color: rgb(236, 210, 206);
-}
-.icon-feup .path48:before {
-  content: "\e98d";
-  margin-left: -2.845703125em;
-  color: rgb(236, 210, 206);
-}
-.icon-feup .path49:before {
-  content: "\e98e";
-  margin-left: -2.845703125em;
-  color: rgb(236, 210, 206);
-}
-.icon-feup .path50:before {
-  content: "\e98f";
-  margin-left: -2.845703125em;
-  color: rgb(236, 210, 206);
-}
-.icon-feup .path51:before {
-  content: "\e990";
-  margin-left: -2.845703125em;
-  color: rgb(254, 254, 254);
-}
-.icon-feup .path52:before {
-  content: "\e991";
-  margin-left: -2.845703125em;
-  color: rgb(254, 254, 254);
-}
-.icon-feup .path53:before {
-  content: "\e992";
-  margin-left: -2.845703125em;
-  color: rgb(254, 254, 254);
-}
-.icon-feup .path54:before {
-  content: "\e993";
-  margin-left: -2.845703125em;
-  color: rgb(254, 254, 254);
-}
-.icon-feup .path55:before {
-  content: "\e994";
-  margin-left: -2.845703125em;
-  color: rgb(254, 254, 254);
+  color: #a73621;
 }
 .icon-university-porto:before {
   content: "\e95d";
