--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -53,9 +53,9 @@
         
       <hr/>
       <div class="shortbio">
-          ♏ 90's | 🎂 25 years | 🏠 From Lisbon, PT | 📍 Living in Oporto, PT
+          ♏ 90's | 🎂 25 years | 🏠 From Lisbon, PT | 📍 Living in Porto, PT
           <br>
-          🎓 BSc @ FCT NOVA, PT | 🎓 MSc @ FEUP, PT
+          🎓 BSc. @ FCT NOVA, PT | 🎓 MSc. @ FEUP, PT
           <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
