--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -66,18 +66,37 @@
       <hr/>
     
       <br>
+      
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
+      <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">    
+    
+      <div class="heading">
+        Academic and Professional
+      </div>     
+      
+      <hr/>
         
+      <div class="w3-container w3-xlarge w3-padding">
+          <a target="_blank" href="https://github.com/rubenandrebarreiro/" title="Rúben André Barreiro on GitHub"><i class="fa fa-github w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
+          <a target="_blank" href="https://gitlab.com/rubenandrebarreiro/" title="Rúben André Barreiro on GitLab"><i class="fa fa-gitlab w3-hover-text-orange" title="Rúben André Barreiro on GitLab"></i></a>
+          <a target="_blank" href="https://bitbucket.org/rubenandrebarreiro/" title="Rúben André Barreiro on Atlassian Bitbucket"><i class="fa fa-bitbucket w3-hover-text-blue" title="Rúben André Barreiro on Atlassian Bitbucket"></i></a>
+          <a target="_blank" href="https://stackoverflow.com/story/rubenandrebarreiro" title="Rúben André Barreiro on Stack Overflow"><i class="fa fa-stack-overflow w3-hover-text-orange" title="Rúben André Barreiro on Stack Overflow"></i></a>
+          <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-researchgate w3-hover-text-teal" title="Rúben André Barreiro on ResearchGate"></i></a>
+      </div>
+
+      <hr/>
+      
+      <br>
+      <br>
+    
       <div class="heading">
         Social
       </div>
         
       <hr/>
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
-      <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
-
         
       <div class="w3-container w3-xlarge w3-padding">
           <a target="_blank" href="https://www.facebook.com/rubenandrebarreiro" title="Rúben André Barreiro (BadNewz) on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben André Barreiro (BadNewz) on Facebook"></i></a>
@@ -86,7 +105,6 @@
           <a target="_blank" href="https://www.twitter.com/ruben_badnewz/" title="Rúben André Barreiro (BadNewz) on Twitter"><i class="fa fa-twitter w3-hover-text-cyan" title="Rúben André Barreiro (BadNewz) on Twitter"></i></a>
           <a target="_blank" href="https://badnewz-lifestyle.com/" title="BadNewz Lifestyle on WordPress"><i class="fa fa-wordpress w3-hover-text-blue" title="BadNewz Lifestyle on WordPress"></i></a>
           <a target="_blank" href="https://www.reddit.com/user/ruben_barreiro_92" title="Rúben André Barreiro (BadNewz) on Reddit"><i class="fa fa-reddit w3-hover-text-gray" title="Rúben André Barreiro (BadNewz) on Reddit"></i></a>
-          <a target="_blank" href="https://github.com/rubenandrebarreiro" title="Rúben André Barreiro on GitHub"><i class="fa fa-github w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
           <a target="_blank" href="https://stackoverflow.com/story/rubenandrebarreiro" title="Rúben André Barreiro on Stack Overflow"><i class="fa fa-stack-overflow w3-hover-text-orange" title="Rúben André Barreiro on Stack Overflow"></i></a>
           <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-researchgate w3-hover-text-teal" title="Rúben André Barreiro on ResearchGate"></i></a>
 
