--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -53,9 +53,9 @@
         
       <hr/>
       <div class="shortbio">
-          ♏ 90's | 🎂 25 years | 🏠 From Lisbon, PT | 📍 Living in Porto, PT
+          ♏ 90's | 🎂 26 years | 🏠 From Lisbon, PT | 📍 Living in Porto, PT
           <br>
-          🎓 BSc. @ FCT NOVA, PT | 🎓 MSc. @ FEUP, PT
+          🎓 BSc./MSc. @ FCT NOVA, PT &amp; FEUP, PT
           <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
@@ -80,7 +80,7 @@
       <hr/>
         
       <div class="w3-container w3-xlarge w3-padding">
-          <a target="_blank" href="https://github.com/rubenandrebarreiro/" title="Rúben André Barreiro on GitHub"><i class="fa fa-github w3-hover-text-black" title="Rúben André Barreiro on GitHub"></i></a>
+          <a target="_blank" href="https://github.com/rubenandrebarreiro/" title="Rúben André Barreiro on GitHub"><i class="fa fa-github w3-hover-text-dark-gray" title="Rúben André Barreiro on GitHub"></i></a>
           <a target="_blank" href="https://gitlab.com/rubenandrebarreiro/" title="Rúben André Barreiro on GitLab"><i class="fa fa-gitlab w3-hover-text-orange" title="Rúben André Barreiro on GitLab"></i></a>
           <a target="_blank" href="https://bitbucket.org/rubenandrebarreiro/" title="Rúben André Barreiro on Atlassian Bitbucket"><i class="fa fa-bitbucket w3-hover-text-blue" title="Rúben André Barreiro on Atlassian Bitbucket"></i></a>
           <a target="_blank" href="https://stackoverflow.com/story/rubenandrebarreiro" title="Rúben André Barreiro on Stack Overflow"><i class="fa fa-stack-overflow w3-hover-text-orange" title="Rúben André Barreiro on Stack Overflow"></i></a>
@@ -116,8 +116,7 @@
           <a target="_blank" href="https://www.pinterest.com/ruben_badnewz/" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-pinterest-p w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-flickr w3-hover-text-purple"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-500px w3-hover-text-dark-gray"></i></a>
-          <a target="_blank" href="http://vsco.co/ruben-badnewz/" style="text-decoration: none"
-                 onmouseover="this.style.color='#848484'" onmouseout="this.style.color='#FFFFFF'">
+          <a target="_blank" href="http://vsco.co/ruben-badnewz/" style="text-decoration: none" onmouseover="this.style.color='#848484'" onmouseout="this.style.color='#FFFFFF'">
               <span class="icon-vsco" title="Rúben André Barreiro (BadNewz Lifestyle) on VSCO" style="font-size:20px"></span>
           </a>
           <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
