--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -55,7 +55,7 @@
       <div class="shortbio">
           ♏ 90's | 🎂 26 years | 🏠 From Lisbon, PT | 📍 Living in Porto, PT
           <br>
-          🎓 BSc./MSc. @ FCT NOVA, PT &amp; FEUP, PT
+          🎓 BSc./MSc. @ FCT NOVA &amp; FEUP, PT
           <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
