--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -85,6 +85,7 @@
           <a target="_blank" href="https://bitbucket.org/rubenandrebarreiro/" title="Rúben André Barreiro on Atlassian Bitbucket"><i class="fa fa-bitbucket w3-hover-text-blue" title="Rúben André Barreiro on Atlassian Bitbucket"></i></a>
           <a target="_blank" href="https://stackoverflow.com/story/rubenandrebarreiro" title="Rúben André Barreiro on Stack Overflow"><i class="fa fa-stack-overflow w3-hover-text-orange" title="Rúben André Barreiro on Stack Overflow"></i></a>
           <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-researchgate w3-hover-text-teal" title="Rúben André Barreiro on ResearchGate"></i></a>
+          <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-orcid w3-hover-text-teal" title="Rúben André Barreiro on ResearchGate"></i></a>
       </div>
 
       <hr/>
