--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -86,7 +86,7 @@
           <a target="_blank" href="https://stackoverflow.com/story/rubenandrebarreiro" title="Rúben André Barreiro on Stack Overflow"><i class="fa fa-stack-overflow w3-hover-text-orange" title="Rúben André Barreiro on Stack Overflow"></i></a>
           <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-researchgate w3-hover-text-teal" title="Rúben André Barreiro on ResearchGate"></i></a>
           <a target="_blank" href="http://orcid.org/0000-0003-2572-8949" title="Rúben André Barreiro on ORCID"><i class="ai ai-orcid w3-hover-text-lime" title="Rúben André Barreiro on ORCID"></i></a>
-          <a target="_blank" href="https://utaustinportugal.academia.edu/rubenandrebarreiro/" title="Rúben André Barreiro on Academia"><i class="ai ai-orcid w3-hover-text-dark-gray" title="Rúben André Barreiro on Academia"></i></a>
+          <a target="_blank" href="https://utaustinportugal.academia.edu/rubenandrebarreiro/" title="Rúben André Barreiro on Academia"><i class="ai ai-academia w3-hover-text-dark-gray" title="Rúben André Barreiro on Academia"></i></a>
       </div>
 
       <hr/>
