--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -53,9 +53,9 @@
         
       <hr/>
       <div class="shortbio">
-          ♏ 90's | 🎂 26 years | 🏠 From Lisbon, PT | 📍 Living in Porto, PT
+          ♏ 90's | 🎂 26 years | 🏠 From Lisbon, PT | 📍 Living in Almada, PT
           <br>
-          🎓 BSc./MSc. @ FCT NOVA &amp; FEUP, PT
+          🎓 Integrated Master (BSc. and MSc. bologna degree) @ FCT NOVA
           <br>
           💻 Computer Science Engineer | 👨‍💻 IT/IS Programmer & Technician
           <br>
