Some photos added to photoshoots
Some photos added to photoshoots

--- a/photoshoots/2018-09-17-david-oliveira-photoshoots-1/css/demo.css
+++ b/photoshoots/2018-09-17-david-oliveira-photoshoots-1/css/demo.css
@@ -27,7 +27,7 @@ h1, h5{
 }
 h1 span, h5{
 	font-size:18px;
-	color:#c08763;
+	color:#4286f4;
 	font-family:Georgia, serif;
 	font-style:italic;
 	text-transform:none;
