--- a/photoshoots/2018-09-17-david-oliveira-photoshoots-1/css/demo.css
+++ b/photoshoots/2018-09-17-david-oliveira-photoshoots-1/css/demo.css
@@ -18,7 +18,7 @@ h1, h5{
 	font-size:40px;
 	font-weight:normal;
 	text-transform:uppercase;
-	font-family:'Monoton', Arial, sans-serif;
+	font-family:'Gloria Hallelujah', Arial, sans-serif;
 	color:#fff;
 	text-shadow:1px 1px 1px #000;
 	word-spacing:10px;
