--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -102,8 +102,16 @@
       <hr/>
         
       <div class="w3-container w3-xlarge w3-padding">
-          <a target="_blank" href="https://www.facebook.com/rubenandrebarreiro" title="Rúben André Barreiro (BadNewz) on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben André Barreiro (BadNewz) on Facebook"></i></a>
-          <a target="_blank" href="https://www.facebook.com/badnewz.lifestyle" title="BadNewz Lifestyle on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Lifestyle on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/rubenandrebarreiro/" title="Rúben André Barreiro (BadNewz) on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben André Barreiro (BadNewz) on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/ruben.badnewz/" title="Rúben BadNewz on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben BadNewz on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.lifestyle/" title="BadNewz Lifestyle on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Lifestyle on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.streetwear.clothing/" title="BadNewz Streetwear Clothing on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Streetwear Clothing on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.suits/" title="BadNewz Suits on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Suits on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.photo.lab/" title="BadNewz Photo Lab on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Photo Lab on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.productions/" title="BadNewz Productions on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Productions on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.fitness.sport/" title="BadNewz Fitness and Sport on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Fitness and Sport on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.fragances/" title="BadNewz Fragances on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Fragances on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.liquor/" title="BadNewz Liquor on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Liquor on Facebook"></i></a>
           
 		  <br>
 		  
