--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -70,6 +70,8 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open Sans">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/v4-shims.css">
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/3/w3.css">
       <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">    
     
@@ -132,7 +134,7 @@
 		  <a target="_blank" href="https://www.twitter.com/ruben_badnewz/" title="Rúben André Barreiro (BadNewz) on Twitter"><i class="fa fa-twitter w3-hover-text-cyan" title="Rúben André Barreiro (BadNewz) on Twitter"></i></a>
           <a target="_blank" href="https://badnewz-lifestyle.com/" title="BadNewz Lifestyle on WordPress"><i class="fa fa-wordpress w3-hover-text-blue" title="BadNewz Lifestyle on WordPress"></i></a>
           <a target="_blank" href="https://www.reddit.com/user/ruben_barreiro_92" title="Rúben André Barreiro (BadNewz) on Reddit"><i class="fa fa-reddit w3-hover-text-gray" title="Rúben André Barreiro (BadNewz) on Reddit"></i></a>
-          <a target="_blank" href="someLink"><i class="fas fa-youtube w3-hover-text-red"></i></a>
+          <a target="_blank" href="someLink"><i class="fa fa-youtube w3-hover-text-red"></i></a>
           <a target="_blank" href="https://badnewz-lifestyle.tumblr.com/" title="BadNewz Lifestyle on Tumblr"><i class="fa fa-tumblr w3-hover-text-indigo" title="BadNewz Lifestyle on Tumblr"></i></a>
           <a target="_blank" href="https://www.pinterest.com/ruben_badnewz/" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"><i class="fa fa-pinterest-p w3-hover-text-red" title="Rúben BadNewz (BadNewz Lifestyle) on Pinterest"></i></a>
           <a target="_blank" href="someLink"><i class="fa fa-flickr w3-hover-text-purple"></i></a>
@@ -142,7 +144,7 @@
           </a>
           <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
           <a href="https://rubenandrebarreiro.github.io/contacts#othersociallinksusernames" title="Other Social Links/Usernames"><i class="fa fa-comments w3-hover-text-light-blue" title="Other Social Links/Usernames"></i></a>
-          <a href="https://rubenandrebarreiro.github.io/contacts#emails" title="My E-mails"><i class="fas fa-at w3-hover-text-yellow" title="My E-mails"></i></a>
+          <a href="https://rubenandrebarreiro.github.io/contacts#emails" title="My E-mails"><i class="fa fa-at w3-hover-text-yellow" title="My E-mails"></i></a>
       </div>
       <hr/>
     
