--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -144,7 +144,7 @@
           </a>
           <i class="fa fa-snapchat w3-hover-text-yellow" title="ruben.badnewz on Snapchat"></i>
           <a href="https://rubenandrebarreiro.github.io/contacts#othersociallinksusernames" title="Other Social Links/Usernames"><i class="fa fa-comments w3-hover-text-light-blue" title="Other Social Links/Usernames"></i></a>
-          <a href="https://rubenandrebarreiro.github.io/contacts#emails" title="My E-mails"><i class="fa fa-at w3-hover-text-yellow" title="My E-mails"></i></a>
+          <a href="https://rubenandrebarreiro.github.io/contacts#emails" title="My E-mails"><i class="fas fa-at w3-hover-text-yellow" title="My E-mails"></i></a>
       </div>
       <hr/>
     
