Some minor updates
Some minor updates

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -110,24 +110,24 @@
           <a target="_blank" href="https://www.facebook.com/ruben.badnewz/" title="Rúben BadNewz on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="Rúben BadNewz on Facebook"></i></a>
           <a target="_blank" href="https://www.facebook.com/badnewz.lifestyle/" title="BadNewz Lifestyle on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Lifestyle on Facebook"></i></a>
           <a target="_blank" href="https://www.facebook.com/badnewz.streetwear.clothing/" title="BadNewz Streetwear Clothing on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Streetwear Clothing on Facebook"></i></a>
-          <a target="_blank" href="https://www.facebook.com/badnewz.suits/" title="BadNewz Suits on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Suits on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.suits.co/" title="BadNewz Suits on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Suits & Co. on Facebook"></i></a>
           <a target="_blank" href="https://www.facebook.com/badnewz.photo.lab/" title="BadNewz Photo Lab on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Photo Lab on Facebook"></i></a>
           <a target="_blank" href="https://www.facebook.com/badnewz.productions/" title="BadNewz Productions on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Productions on Facebook"></i></a>
-          <a target="_blank" href="https://www.facebook.com/badnewz.fitness.sport/" title="BadNewz Fitness and Sport on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Fitness and Sport on Facebook"></i></a>
-          <a target="_blank" href="https://www.facebook.com/badnewz.fragances/" title="BadNewz Fragances on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Fragances on Facebook"></i></a>
           <a target="_blank" href="https://www.facebook.com/badnewz.liquor/" title="BadNewz Liquor on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Liquor on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.fitness.sport/" title="BadNewz Fitness and Sport on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Fitness & Sport on Facebook"></i></a>
+          <a target="_blank" href="https://www.facebook.com/badnewz.fragances/" title="BadNewz Fragances on Facebook"><i class="fa fa-facebook-official w3-hover-text-indigo" title="BadNewz Fragances on Facebook"></i></a>
           
 		  <br>
 		  
 		  <a target="_blank" href="https://www.instagram.com/ruben.badnewz/" title="Rúben André Barreiro (BadNewz) on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="Rúben André Barreiro (BadNewz) on Instagram"></i></a>
           <a target="_blank" href="https://www.instagram.com/badnewz.lifestyle/" title="BadNewz Lifestyle on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="BadNewz Lifestyle on Instagram"></i></a>
           <a target="_blank" href="https://www.instagram.com/badnewz.streetwear.clothing/" title="BadNewz Streetwear Clothing on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="BadNewz Streetwear Clothing on Instagram"></i></a>
-          <a target="_blank" href="https://www.instagram.com/badnewz.suits/" title="BadNewz Suits on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="BadNewz Suits on Instagram"></i></a>
+          <a target="_blank" href="https://www.instagram.com/badnewz.suits.co/" title="BadNewz Suits & Co. on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="BadNewz Suits & Co. on Instagram"></i></a>
           <a target="_blank" href="https://www.instagram.com/badnewz.photo.lab/" title="BadNewz Photo Lab on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="BadNewz Photo Lab on Instagram"></i></a>
           <a target="_blank" href="https://www.instagram.com/badnewz.productions/" title="BadNewz Productions on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="BadNewz Productions on Instagram"></i></a>
-          <a target="_blank" href="https://www.instagram.com/badnewz.fitness.sport/" title="BadNewz Fitness and Sport on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="BadNewz Fitness and Sport on Instagram"></i></a>
-          <a target="_blank" href="https://www.instagram.com/badnewz.fragances/" title="BadNewz Fragances on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="BadNewz Fragances on Instagram"></i></a>
           <a target="_blank" href="https://www.instagram.com/badnewz.liquor/" title="BadNewz Liquor on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="BadNewz Liquor on Instagram"></i></a>
+          <a target="_blank" href="https://www.instagram.com/badnewz.fitness.sport/" title="BadNewz Fitness & Sport on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="BadNewz Fitness & Sport on Instagram"></i></a>
+          <a target="_blank" href="https://www.instagram.com/badnewz.fragances/" title="BadNewz Fragances on Instagram"><i class="fa fa-instagram w3-hover-text-orange" title="BadNewz Fragances on Instagram"></i></a>
           
           <br>
           
