--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -152,7 +152,7 @@
           <div class="sidebarinfoinstructions">
             *** Click in the right side of this tab, to open/close it ***
             <br>
-            © 2019 Rúben André Barreiro - GitHub's Page/Personal Blog
+            © 2019 Rúben André Barreiro - GitHub's Porfolio/Personal Blog
             <br>
             All rights reserved
           </div>
