--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -89,9 +89,10 @@
           <a target="_blank" href="https://utaustinportugal.academia.edu/rubenandrebarreiro/" title="Rúben André Barreiro on Academia"><i class="ai ai-academia w3-hover-text-dark-gray" title="Rúben André Barreiro on Academia"></i></a>
           <a target="_blank" href="https://mathoverflow.net/users/134256/r%C3%BAben-andr%C3%A9-barreiro" title="Rúben André Barreiro on MathOverflow"><i class="ai ai-mathoverflow w3-hover-text-orange" title="Rúben André Barreiro on MathOverflow"></i></a>
           <a target="_blank" href="https://www.mendeley.com/profiles/ruben-andre-barreiro/" title="Rúben André Barreiro on Mendeley"><i class="ai ai-mendeley w3-hover-text-dark-gray" title="Rúben André Barreiro on Mendeley"></i></a>
-          <a target="_blank" href="http://orcid.org/0000-0003-2572-8949" title="Rúben André Barreiro on ORCID"><i class="ai ai-orcid w3-hover-text-lime" title="Rúben André Barreiro on ORCID"></i></a>
+          <a target="_blank" href="http://orcid.org/0000-0003-2572-8949" title="Rúben André Barreiro on ORCiD"><i class="ai ai-orcid w3-hover-text-lime" title="Rúben André Barreiro on ORCiD"></i></a>
+          <a target="_blank" href="https://publons.com/researcher/1670842/ruben-andre-barreiro/" title="Rúben André Barreiro on Publons"><i class="ai ai-publons w3-hover-text-blue" title="Rúben André Barreiro on Publons"></i></a>
           <a target="_blank" href="https://www.researchgate.net/profile/Ruben_Barreiro" title="Rúben André Barreiro on ResearchGate"><i class="ai ai-researchgate w3-hover-text-teal" title="Rúben André Barreiro on ResearchGate"></i></a>
-          <a target="_blank" href="http://www.researcherid.com/rid/" title="Rúben André Barreiro on ResearcherID"><i class="ai ai-researcherid w3-hover-text-orange" title="Rúben André Barreiro on ResearcherID"></i></a>
+          <a target="_blank" href="http://www.researcherid.com/rid/A-6299-2019" title="Rúben André Barreiro on ResearcherID"><i class="ai ai-researcherid w3-hover-text-dark-gray" title="Rúben André Barreiro on ResearcherID"></i></a>
           <a target="_blank" href="https://stackoverflow.com/story/rubenandrebarreiro" title="Rúben André Barreiro on Stack Overflow"><i class="fa fa-stack-overflow w3-hover-text-orange" title="Rúben André Barreiro on Stack Overflow"></i></a>
       </div>
 
