Some minor updates and changes
Some minor updates and changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="blog-footer content-wrapper">
-  <p>&copy; <span class="full-year"></span> {{ site.title }} - GitHub's Page/Personal Blog - All rights reserved</p>
+  <p>&copy; <span class="full-year"></span> {{ site.title }} - GitHub's Portfolio/Personal Blog - All rights reserved</p>
 </footer>
 <script src="{{ site.baseurl }}/assets/js/scripts.js"></script>
