Music Player added to the Sidebar
Music Player added to the Sidebar

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -150,6 +150,12 @@
           <a href="https://rubenandrebarreiro.github.io/contacts#emails-content" title="My E-mails"><i class="fas fa-at w3-hover-text-yellow" title="My E-mails"></i></a>
       </div>
       <hr/>
+      
+      <center>
+        <audio controls>
+            <source src="music/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3" type="audio/mpeg">
+          </audio>
+      </center>
     
       <center>
           <div class="sidebarinfoinstructions">
