Some minor changes
Some minor changes

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -153,6 +153,7 @@
       
       <center>
         <audio controls>
+            Travis Scott feat. Kendrick Lamar - Goosebumps
             <source src="musics/Travis Scott feat. Kendrick Lamar - Goosebumps.mp3" type="audio/mpeg">
           </audio>
       </center>
